--- a/coffee_shop.html
+++ b/coffee_shop.html
@@ -1,1 +1,140 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coffee Shop</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f7f7f7;
+        }
+        header {
+            background-color: #6f4e37;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+        }
+        section {
+            padding: 20px;
+        }
+        .menu {
+            background-color: #fff;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .menu ul {
+            list-style-type: square;
+        }
+        .menu ol {
+            list-style-type: decimal;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #6f4e37;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Welcome to Coffee Bliss</h1>
+    </header>
+
+    <section>
+        <h2>About Us</h2>
+        <p>At Coffee Bliss, we brew the finest coffee from around the world, offering a cozy space for coffee lovers. Come relax, enjoy a cup, and savor the best brews in town!</p>
+    </section>
+
+    <section>
+        <h2>Menu</h2>
+        <div class="menu">
+            <h3>Coffee Beverages</h3>
+            <ul>
+                <li>Espresso</li>
+                <li>Americano</li>
+                <li>Cappuccino</li>
+                <li>Latte</li>
+                <li>Mocha</li>
+            </ul>
+
+            <h3>Pastries</h3>
+            <ol>
+                <li>Croissant</li>
+                <li>Muffin</li>
+                <li>Scone</li>
+                <li>Cinnamon Roll</li>
+                <li>Donut</li>
+            </ol>
+        </div>
+
+        <h3>Price List</h3>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Price</th>
+            </tr>
+            <tr>
+                <td>Espresso</td>
+                <td>$2.50</td>
+            </tr>
+            <tr>
+                <td>Americano</td>
+                <td>$3.00</td>
+            </tr>
+            <tr>
+                <td>Cappuccino</td>
+                <td>$3.50</td>
+            </tr>
+            <tr>
+                <td>Latte</td>
+                <td>$4.00</td>
+            </tr>
+            <tr>
+                <td>Mocha</td>
+                <td>$4.50</td>
+            </tr>
+            <tr>
+                <td>Croissant</td>
+                <td>$2.00</td>
+            </tr>
+            <tr>
+                <td>Muffin</td>
+                <td>$2.50</td>
+            </tr>
+            <tr>
+                <td>Scone</td>
+                <td>$3.00</td>
+            </tr>
+            <tr>
+                <td>Cinnamon Roll</td>
+                <td>$2.75</td>
+            </tr>
+            <tr>
+                <td>Donut</td>
+                <td>$1.50</td>
+            </tr>
+        </table>
+    </section>
+
+</body>
+</html>
