--- a/coffee_shop/menu.html
+++ b/coffee_shop/menu.html
@@ -1,1 +1,122 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu - Coffee Shop</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #6f4e37;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+        }
+        section {
+            padding: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #6f4e37;
+            color: white;
+        }
+        .back-link {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #6f4e37;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .back-link:hover {
+            background-color: #553728;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Our Menu</h1>
+    </header>
+
+    <section>
+        <h2>Coffee Beverages</h2>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Price</th>
+            </tr>
+            <tr>
+                <td>Espresso</td>
+                <td>$2.50</td>
+            </tr>
+            <tr>
+                <td>Americano</td>
+                <td>$3.00</td>
+            </tr>
+            <tr>
+                <td>Cappuccino</td>
+                <td>$3.50</td>
+            </tr>
+            <tr>
+                <td>Latte</td>
+                <td>$4.00</td>
+            </tr>
+            <tr>
+                <td>Mocha</td>
+                <td>$4.50</td>
+            </tr>
+        </table>
+
+        <h2>Pastries</h2>
+        <table>
+            <tr>
+                <th>Item</th>
+                <th>Price</th>
+            </tr>
+            <tr>
+                <td>Croissant</td>
+                <td>$2.00</td>
+            </tr>
+            <tr>
+                <td>Muffin</td>
+                <td>$2.50</td>
+            </tr>
+            <tr>
+                <td>Scone</td>
+                <td>$3.00</td>
+            </tr>
+            <tr>
+                <td>Cinnamon Roll</td>
+                <td>$2.75</td>
+            </tr>
+            <tr>
+                <td>Donut</td>
+                <td>$1.50</td>
+            </tr>
+        </table>
+
+        <a href="index.html" class="back-link">Back to Home</a>
+    </section>
+
+</body>
+</html>
