--- a/coffee_shop/coffe_shop.html
+++ b/coffee_shop/coffe_shop.html
@@ -9,6 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f3f1ed;
         }
         header {
             background-color: #6f4e37;
@@ -34,6 +35,26 @@
         .menu-link:hover {
             background-color: #553728;
         }
+        .hours, .location {
+            background-color: #fff;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .special-offer {
+            background-color: #ffe5b4;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 8px;
+            text-align: center;
+        }
+        footer {
+            background-color: #6f4e37;
+            color: white;
+            text-align: center;
+            padding: 10px;
+        }
     </style>
 </head>
 <body>
@@ -48,6 +69,26 @@
         
         <a href="menu.html" class="menu-link">View Our Menu</a>
     </section>
+
+    <section class="location">
+        <h2>Location</h2>
+        <p>Visit us at 123 Brew Street, Coffee Town, CT 45678. Our café offers a comfortable and inviting atmosphere where you can enjoy your favorite coffee blends.</p>
+    </section>
+
+    <section class="hours">
+        <h2>Hours of Operation</h2>
+        <p><strong>Monday - Friday:</strong> 7:00 AM - 8:00 PM</p>
+        <p><strong>Saturday - Sunday:</strong> 8:00 AM - 10:00 PM</p>
+    </section>
+
+    <section class="special-offer">
+        <h2>Special Offer</h2>
+        <p>Enjoy a free pastry with every large coffee purchase on weekdays from 2:00 PM - 4:00 PM! Don't miss out on this delicious deal.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 AK Coffee Shop. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
