--- a/different_basic_tags.html
+++ b/different_basic_tags.html
@@ -1,1 +1,124 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Basic Tags Demo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        .tag-section {
+            margin-bottom: 20px;
+        }
+        code {
+            background-color: #f4f4f4;
+            padding: 5px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Basic HTML Tags Demonstration</h1>
+
+    <div class="tag-section">
+        <h2>1. Headings</h2>
+        <h1>This is an H1 Heading</h1>
+        <h2>This is an H2 Heading</h2>
+        <h3>This is an H3 Heading</h3>
+        <h4>This is an H4 Heading</h4>
+        <h5>This is an H5 Heading</h5>
+        <h6>This is an H6 Heading</h6>
+    </div>
+
+    <div class="tag-section">
+        <h2>2. Paragraph</h2>
+        <p>This is a paragraph of text. Paragraphs are useful for separating blocks of text.</p>
+    </div>
+
+    <div class="tag-section">
+        <h2>3. Bold and Italic Text</h2>
+        <p>This is <b>bold</b> text.</p>
+        <p>This is <i>italic</i> text.</p>
+    </div>
+
+    <div class="tag-section">
+        <h2>4. Hyperlinks</h2>
+        <p>Click <a href="https://www.example.com" target="_blank">here</a> to visit Example.com.</p>
+    </div>
+
+    <div class="tag-section">
+        <h2>5. Lists</h2>
+        <p>Unordered List:</p>
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
+        
+        <p>Ordered List:</p>
+        <ol>
+            <li>First Item</li>
+            <li>Second Item</li>
+            <li>Third Item</li>
+        </ol>
+    </div>
+
+    <div class="tag-section">
+        <h2>6. Images</h2>
+        <p>Below is an image:</p>
+        <img src="https://via.placeholder.com/150" alt="Sample Image">
+    </div>
+
+    <div class="tag-section">
+        <h2>7. Forms</h2>
+        <form action="/submit" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Enter your name">
+            <br><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email">
+            <br><br>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+
+    <div class="tag-section">
+        <h2>8. Table</h2>
+        <table border="1">
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+            </tr>
+            <tr>
+                <td>John</td>
+                <td>25</td>
+            </tr>
+            <tr>
+                <td>Jane</td>
+                <td>30</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="tag-section">
+        <h2>9. Blockquote</h2>
+        <blockquote>
+            "This is a blockquote. It's used to display a quotation from another source."
+        </blockquote>
+    </div>
+
+    <div class="tag-section">
+        <h2>10. Code</h2>
+        <p>Here is some inline code: <code>&lt;h1&gt;Hello, World!&lt;/h1&gt;</code></p>
+        <pre>
+&lt;html&gt;
+    &lt;body&gt;
+        &lt;h1&gt;Hello, World!&lt;/h1&gt;
+    &lt;/body&gt;
+&lt;/html&gt;
+        </pre>
+    </div>
+
+</body>
+</html>
