--- a/different_basic_tags.html
+++ b/different_basic_tags.html
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Basic Tags Demo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        .tag-section {
-            margin-bottom: 20px;
-        }
-        code {
-            background-color: #f4f4f4;
-            padding: 5px;
-        }
-    </style>
+    <title>HTML Basic Tags </title>
+
 </head>
 <body>
-    <h1>Basic HTML Tags Demonstration</h1>
+    <h1><u>Basic HTML Tags Demonstration</u></h1>
 
     <div class="tag-section">
         <h2>1. Headings</h2>
@@ -44,7 +31,7 @@
 
     <div class="tag-section">
         <h2>4. Hyperlinks</h2>
-        <p>Click <a href="https://www.example.com" target="_blank">here</a> to visit Example.com.</p>
+        <p>Click <a href="https://google.com" target="_blank">here</a> to visit Google.com.</p>
     </div>
 
     <div class="tag-section">
@@ -67,7 +54,7 @@
     <div class="tag-section">
         <h2>6. Images</h2>
         <p>Below is an image:</p>
-        <img src="https://via.placeholder.com/150" alt="Sample Image">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHSECBgXcwqO_qW-4DcffZh9QtcxOFsFUNwQ&s" alt="Sample Image">
     </div>
 
     <div class="tag-section">
@@ -99,25 +86,6 @@
                 <td>30</td>
             </tr>
         </table>
-    </div>
-
-    <div class="tag-section">
-        <h2>9. Blockquote</h2>
-        <blockquote>
-            "This is a blockquote. It's used to display a quotation from another source."
-        </blockquote>
-    </div>
-
-    <div class="tag-section">
-        <h2>10. Code</h2>
-        <p>Here is some inline code: <code>&lt;h1&gt;Hello, World!&lt;/h1&gt;</code></p>
-        <pre>
-&lt;html&gt;
-    &lt;body&gt;
-        &lt;h1&gt;Hello, World!&lt;/h1&gt;
-    &lt;/body&gt;
-&lt;/html&gt;
-        </pre>
     </div>
 
 </body>
