--- a/link_different_pages/page1.html
+++ b/link_different_pages/page1.html
@@ -1,1 +1,23 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page 1 - Image</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Page 1: Image Example</h1>
+
+    <p>This page contains an image.</p>
+
+    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+
+    <p><a href="index.html">Go Back to Main Page</a></p>
+</body>
+</html>
