--- a/link_different_pages/index.html
+++ b/link_different_pages/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,18 +15,11 @@
 
     <p>This page demonstrates how to link to different HTML pages and within the same page.</p>
 
-    <h2>Navigation Links</h2>
+    <h2><u>Navigation Links</u></h2>
     <ul>
         <li><a href="page1.html">Go to Page 1 (Contains Image)</a></li>
         <li><a href="page2.html">Go to Page 2 (Contains Table)</a></li>
-        <li><a href="#section1">Jump to Section 1 (Within this page)</a></li>
-        <li><a href="#section2">Jump to Section 2 (Within this page)</a></li>
+        
     </ul>
-
-    <h2 id="section1">Section 1: About Linking</h2>
-    <p>In HTML, you can create links using the <code>&lt;a&gt;</code> tag. You can link to other pages by specifying the href attribute with the target page's URL.</p>
-
-    <h2 id="section2">Section 2: Internal Linking</h2>
-    <p>By using the ID of an element in the page, you can create internal links that jump to specific sections of the page.</p>
 </body>
 </html>
