--- a/link_different_pages/page1.html
+++ b/link_different_pages/page1.html
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 1 - Image</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-    </style>
-</head>
+<html>
 <body>
-    <h1>Page 1: Image Example</h1>
+<h3>This page contains Car Images</h3>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHSECBgXcwqO_qW-4DcffZh9QtcxOFsFUNwQ&s" style="width50px; height:500px;">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTdHtqioLW3qAdaZCALAUcebNjUHLGPovCJ4A&s" style="width50px; height:500px;">
 
-    <p>This page contains an image.</p>
-
-    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
-
-    <p><a href="index.html">Go Back to Main Page</a></p>
+<img src="https://cdn.pixabay.com/photo/2023/02/07/17/49/supercar-7774683_640.jpg" style="width50px; height:500px;">
+<img src="https://static.vecteezy.com/system/resources/thumbnails/023/192/562/small_2x/sport-car-running-on-the-road-in-future-city-created-with-generative-ai-free-photo.jpg" style="width50px; height:500px;">
+<img src="https://m.media-amazon.com/images/I/61Rx9tHudUL.jpg" style="width50px; height:500px;">
+<img src="https://cdni.autocarindia.com/utils/ImageResizer.ashx?n=https://cms.haymarketindia.net/model/uploads/modelimages/Hyundai-Creta-180120241405.jpg&w=872&h=578&q=75&c=1" style="width50px; height:500px;">
 </body>
 </html>
+
+
