--- a/html_frame.html
+++ b/html_frame.html
@@ -1,87 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Types of Frames</title>
-    <style>
-        /* Styling for the floating frame */
-        .floating-frame {
-            width: 300px;
-            height: 200px;
-            border: 2px solid green;
-            position: absolute;
-            top: 50px;
-            right: 50px;
-            background-color: #f0f0f0;
-            padding: 10px;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Webpage with Different Types of Frames</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
 
-        /* Styling for the fixed frame */
-        .fixed-frame {
-            width: 300px;
-            height: 200px;
-            border: 2px solid blue;
-            position: fixed;
-            bottom: 50px;
-            left: 50px;
-            background-color: #e0f7fa;
-            padding: 10px;
-        }
+    /* Floating frame */
+    .floating-frame {
+      width: 400px;
+      height: 300px;
+      border: 2px solid #4CAF50;
+      float: left;
+      margin: 20px;
+      overflow: auto;
+    }
 
-        /* Styling for the navigation frame */
-        .navigation-frame {
-            width: 100%;
-            height: 50px;
-            background-color: #00897b;
-            position: relative;
-            text-align: center;
-            padding: 10px;
-            color: white;
-        }
+    /* Mixed frame */
+    .mixed-frame {
+      width: 400px;
+      height: 300px;
+      border: 2px solid #2196F3;
+      margin: 20px;
+      display: inline-block;
+      position: relative;
+    }
 
-        .navigation-frame a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-        }
+    /* Navigation frame */
+    .navigation-frame {
+      width: 200px;
+      height: 100%;
+      background-color: #333;
+      float: left;
+      color: white;
+      padding: 10px;
+    }
 
-        body {
-            font-family: Arial, sans-serif;
-        }
+    .navigation-frame ul {
+      list-style-type: none;
+      padding: 0;
+    }
 
-        .content {
-            margin: 100px 0;
-            text-align: center;
-        }
-    </style>
+    .navigation-frame ul li a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      padding: 10px;
+      border-bottom: 1px solid #444;
+    }
+
+
+
+  </style>
 </head>
 <body>
 
-    <!-- Navigation Frame -->
-    <div class="navigation-frame">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
-    </div>
+  <h1>Webpage with Different Types of Frames</h1>
 
-    <div class="content">
-        <h1>Welcome to the Frames Demo</h1>
-        <p>This page demonstrates different types of frames such as floating, fixed, and navigation frames.</p>
-    </div>
+  <!-- Floating Frame -->
+  <div class="floating-frame">
+    <h2>Floating Frame</h2>
+    <p>This is a floating frame that contains its own scrollable content.</p>
+    <p>Feel free to explore and navigate using the links in the navigation frame!</p>
+    <p>Feel free to explore and navigate using the links in the navigation frame!</p>
+    <p>Curabitur at turpis at turpis bibendum tristique ac in ligula.</p>
+  </div>
 
-    <!-- Floating Frame -->
-    <div class="floating-frame">
-        <h3>Floating Frame</h3>
-        <p>This frame is positioned using absolute positioning and moves when the page is scrolled.</p>
-    </div>
+  <!-- Mixed Frame -->
+  <div class="mixed-frame">
+    <h2>Mixed Frame</h2>
+    <p>This is a mixed frame with both content and an embedded iframe.</p>
+    <iframe src="https://www.example.com" width="100%" height="100" title="Example Frame"></iframe>
+  </div>
 
-    <!-- Fixed Frame -->
-    <div class="fixed-frame">
-        <h3>Fixed Frame</h3>
-        <p>This frame stays fixed at the bottom-left corner even when the page is scrolled.</p>
-    </div>
+  <!-- Navigation Frame -->
+  <div class="navigation-frame">
+    <h2>Navigation</h2>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
+  </div>
+
+  <!-- Main Content Area -->
+  <div class="content">
+    <h2>Main Content</h2>
+    <p>This is the main content area. The navigation frame stays fixed on the left while you scroll through the content here.</p>
+    <p>Feel free to explore and navigate using the links in the navigation frame!</p>
+  </div>
 
 </body>
 </html>
