--- a/html_frame.html
+++ b/html_frame.html
@@ -29,31 +29,37 @@
       position: relative;
     }
 
-    /* Navigation frame */
+    /* Horizontal navigation frame */
     .navigation-frame {
-      width: 200px;
-      height: 100%;
+      width: 100%;
       background-color: #333;
-      float: left;
-      color: white;
       padding: 10px;
+      overflow: hidden;
     }
 
     .navigation-frame ul {
       list-style-type: none;
       padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: space-around;
+    }
+
+    .navigation-frame ul li {
+      display: inline;
     }
 
     .navigation-frame ul li a {
       color: white;
       text-decoration: none;
-      display: block;
-      padding: 10px;
+      padding: 10px 20px;
+      display: inline-block;
       border-bottom: 1px solid #444;
     }
 
-
-
+    .navigation-frame ul li a:hover {
+      background-color: #575757;
+    }
   </style>
 </head>
 <body>
@@ -76,9 +82,8 @@
     <iframe src="https://www.example.com" width="100%" height="100" title="Example Frame"></iframe>
   </div>
 
-  <!-- Navigation Frame -->
+  <!-- Horizontal Navigation Frame -->
   <div class="navigation-frame">
-    <h2>Navigation</h2>
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#services">Services</a></li>
