--- a/html_frame/frameservice.html
+++ b/html_frame/frameservice.html
@@ -1,6 +1,26 @@
+<!DOCTYPE html>
 <html>
+<head>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f0f0f0;
+        }
+        h2 {
+            color: #4CAF50;
+            font-size: 28px;
+            margin-bottom: 10px;
+        }
+        h6 {
+            color: #555;
+            font-size: 16px;
+            font-weight: normal;
+        }
+    </style>
+</head>
 <body>
-<h2> Service Page</h2>
-<h6>This is Service Page</h6>
+    <h2>Service Page</h2>
+    <h6>This is Service Page</h6>
 </body>
 </html>
