--- a/html_frame/aboutframe.html
+++ b/html_frame/aboutframe.html
@@ -5,15 +5,14 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: #f0f0f0;
         }
         h2 {
-            color: #4CAF50;
+            text-align: center;
             font-size: 28px;
             margin-bottom: 10px;
         }
         h6 {
-            color: #555;
+            text-align: center;
             font-size: 16px;
             font-weight: normal;
         }
