--- a/cssstylesfiles/index.html
+++ b/cssstylesfiles/index.html
@@ -1,1 +1,42 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Example</title>
+
+    <!-- External CSS -->
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- Internal CSS -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+
+        .internal-style {
+            color: #4CAF50;
+            font-size: 20px;
+            margin: 20px 0;
+        }
+
+        h2 {
+            color: #333;
+            font-size: 28px;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Inline CSS -->
+    <h2 style="text-align: center; color: blue;">Welcome to the CSS Example Page</h2>
+
+    <p class="internal-style">This paragraph is styled using internal CSS.</p>
+
+    <p class="external-style">This paragraph is styled using external CSS.</p>
+
+    <p style="color: red; font-weight: bold;">This paragraph is styled using inline CSS.</p>
+
+</body>
+</html>
