--- a/cssstylesfiles/index.html
+++ b/cssstylesfiles/index.html
@@ -53,4 +53,22 @@
 
     <div class="internal-box">
         <h2>This section uses Internal CSS</h2>
-        <p>The styles applied here are written inside the <code>&lt;style&gt;</code> tag in the <code>&lt;head&gt;</code> section of the HTM
+        <p>The styles applied here are written inside the <code>&lt;style&gt;</code> tag in the <code>&lt;head&gt;</code> section of the HTML file.</p>
+    </div>
+
+    <div class="external-box">
+        <h2>This section uses External CSS</h2>
+        <p>The styles applied here are written in the external <code>styles.css</code> file.</p>
+    </div>
+
+    <div style="border: 2px dashed red; padding: 15px; margin: 20px; text-align: center;">
+        <h2>Inline CSS Example</h2>
+        <p>This section is styled using inline CSS directly in the HTML elements via the <code>style</code> attribute.</p>
+    </div>
+
+    <footer class="footer">
+        &copy; 2024 CSS Demonstration
+    </footer>
+
+</body>
+</html>
