--- a/form/index.html
+++ b/form/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Form Example</title>
+    <title>Form Registration</title>
 
-    <!-- Internal CSS -->
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -18,37 +14,23 @@
         }
 
         .form-container {
-            background-color: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             width: 350px;
         }
 
-        fieldset {
-            border: 2px solid #4CAF50;
-            padding: 10px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-        }
-
-        legend {
-            font-size: 18px;
-            color: #4CAF50;
-            padding: 0 10px;
-        }
 
         label {
             display: block;
             margin-bottom: 8px;
             font-size: 14px;
-            color: #333;
         }
 
-        input[type="text"],
+        input,
         select,
         textarea {
-            width: 100%;
+            width: 95%;
             padding: 10px;
             margin-bottom: 20px;
             border: 1px solid #ccc;
@@ -56,18 +38,12 @@
             font-size: 14px;
         }
 
-        input[type="submit"] {
-            background-color: #4CAF50;
-            color: white;
+        button{
+            background-color:grey;
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
-            cursor: pointer;
             width: 100%;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
         }
     </style>
 </head>
@@ -77,35 +53,29 @@
         <form>
             <fieldset>
                 <legend>Personal Information</legend>
-
-                <!-- Label and Input -->
+                
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name" list="name-options" required>
+                <input type="text" id="name" name="name" placeholder="Enter your name" list="name-options">
 
-                <!-- Datalist -->
                 <datalist id="name-options">
-                    <option value="John">
-                    <option value="Jane">
-                    <option value="Mike">
-                    <option value="Emily">
+                    <option value="Jyothish">
+                    <option value="Ansar">
+                    <option value="Sooraj">
+                    <option value="fazil">
                 </datalist>
 
-                <!-- Label and Select -->
                 <label for="gender">Gender:</label>
                 <select id="gender" name="gender" required>
-                    <option value="">Select Gender</option>
+                    <option>Select Gender</option>
                     <option value="male">Male</option>
                     <option value="female">Female</option>
-                    <option value="other">Other</option>
                 </select>
 
-                <!-- Label and Textarea -->
                 <label for="bio">Bio:</label>
                 <textarea id="bio" name="bio" rows="4" placeholder="Tell us about yourself"></textarea>
-            </fieldset>
+            </fieldset> <br>
 
-            <!-- Submit Button -->
-            <input type="submit" value="Submit">
+            <button>Submit</button>
         </form>
     </div>
 
