--- a/form/index.html
+++ b/form/index.html
@@ -5,7 +5,6 @@
 
     <style>
         body {
-            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -71,8 +70,8 @@
                     <option value="female">Female</option>
                 </select>
 
-                <label for="bio">Bio:</label>
-                <textarea id="bio" name="bio" rows="4" placeholder="Tell us about yourself"></textarea>
+                <label for="add">Address:</label>
+                <textarea id="bio" name="add" rows="4" placeholder="Address..."></textarea>
             </fieldset> <br>
 
             <button>Submit</button>
