--- a/cssstylesfiles/index.html
+++ b/cssstylesfiles/index.html
@@ -7,8 +7,6 @@
 
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #e0e0e0;
             margin: 0;
             padding: 0;
         }
@@ -21,19 +19,17 @@
         }
 
         .internal-box {
-            border: 2px solid #4CAF50;
-            background-color: #f9f9f9;
+            border: 2px solid ;
             padding: 20px;
             margin: 20px;
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
         }
 
     </style>
 </head>
 <body>
 
-    <!-- Inline CSS -->
     <header style="font-size: 32px; letter-spacing: 2px;">
         Welcome to the CSS Demonstration
     </header>
@@ -48,7 +44,7 @@
         <p>The styles applied here are written in the external <code>styles.css</code> file.</p>
     </div>
 
-    <div style="border: 2px dashed red; padding: 15px; margin: 20px; text-align: center;">
+    <div style="border: 2px solid red; padding: 15px; margin: 20px;">
         <h2>Inline CSS Example</h2>
         <p>This section is styled using inline CSS directly in the HTML elements via the <code>style</code> attribute.</p>
     </div>
