--- a/html_frame/index.html
+++ b/html_frame/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Webpage with Different Types of Frames</title>
   <style>
     body {
@@ -66,7 +64,7 @@
   <!-- Horizontal Navigation Frame -->
   <div class="navigation-frame">
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="html_frame.html">Home</a></li>
       <li><a href="frameservice.html">Services</a></li>
       <li><a href="aboutframe.html">About</a></li>
     </ul>
@@ -79,8 +77,7 @@
     <h2>Floating Frame</h2>
     <p>This is a floating frame that contains its own scrollable content.</p>
     <p>Feel free to explore and navigate using the links in the navigation frame!</p>
-    <p>Feel free to explore and navigate using the links in the navigation frame!</p>
-    <p>Curabitur at turpis at turpis bibendum tristique ac in ligula.</p>
+
   </div>
 
   <!-- Mixed Frame -->
@@ -91,8 +88,6 @@
   </div>
 
 
-
-  <!-- Main Content Area -->
   <div class="content">
     <h2>Main Content</h2>
     <p>This is the main content area. The navigation frame stays fixed on the left while you scroll through the content here.</p>
