--- a/form/index.html
+++ b/form/index.html
@@ -49,7 +49,7 @@
 <body>
 
     <div class="form-container">
-        <form>
+        <form onsubmit="alert('Your Form submitted Successfully');">
             <fieldset>
                 <legend>Personal Information</legend>
                 
