--- a/different_basic_tags.html
+++ b/different_basic_tags.html
@@ -1,5 +1,7 @@
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Basic Tags </title>
 
 </head>
@@ -21,11 +23,6 @@
         <p>This is a paragraph of text. Paragraphs are useful for separating blocks of text.</p>
     </div>
 
-    <div class="tag-section">
-        <h2>3. Bold and Italic Text</h2>
-        <p>This is <b>bold</b> text.</p>
-        <p>This is <i>italic</i> text.</p>
-    </div>
 
     <div class="tag-section">
         <h2>4. Hyperlinks</h2>
@@ -49,27 +46,9 @@
         </ol>
     </div>
 
-    <div class="tag-section">
-        <h2>6. Images</h2>
-        <p>Below is an image:</p>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHSECBgXcwqO_qW-4DcffZh9QtcxOFsFUNwQ&s" alt="Sample Image">
-    </div>
 
     <div class="tag-section">
-        <h2>7. Forms</h2>
-        <form action="/submit" method="post">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="Enter your name">
-            <br><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email">
-            <br><br>
-            <input type="submit" value="Submit">
-        </form>
-    </div>
-
-    <div class="tag-section">
-        <h2>8. Table</h2>
+        <h2>6. Table</h2>
         <table border="1">
             <tr>
                 <th>Name</th>
@@ -85,6 +64,8 @@
             </tr>
         </table>
     </div>
+
+
 
 </body>
 </html>
