--- a/form/index.html
+++ b/form/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
 <head>
     <title>Form Registration</title>
-
     <style>
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        h2 {
+            text-align: center;
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #333;
         }
 
         .form-container {
@@ -17,13 +25,14 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             width: 350px;
+            background-color: #f9f9f9;
         }
-
 
         label {
             display: block;
             margin-bottom: 8px;
             font-size: 14px;
+            color: #555;
         }
 
         input,
@@ -37,16 +46,25 @@
             font-size: 14px;
         }
 
-        button{
-            background-color:grey;
+        button {
+            background-color: grey;
+            color: #fff;
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
             width: 100%;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #555;
         }
     </style>
 </head>
 <body>
+
+    <h2>User Registration Form</h2>
 
     <div class="form-container">
         <form onsubmit="alert('Your Form submitted Successfully');">
@@ -60,7 +78,7 @@
                     <option value="Jyothish">
                     <option value="Ansar">
                     <option value="Sooraj">
-                    <option value="fazil">
+                    <option value="Fazil">
                 </datalist>
 
                 <label for="gender">Gender:</label>
