--- a/js_onchange.html
+++ b/js_onchange.html
@@ -15,13 +15,10 @@
     <p id="result"></p>
 
     <script>
-
         function myFunction() {
-                  var x = document.getElementById("mySelect");
-                   document.getElementById("result").innerHTML = "You selected "+ x;
-
-                 
-                }
+            var x = document.getElementById("mySelect").value;
+            document.getElementById("result").innerHTML = "You selected " + x;
+        }
     </script>
 </body>
 </html>
