--- a/js_mouseover.html
+++ b/js_mouseover.html
@@ -18,8 +18,8 @@
 </div>
 
 <div id="hoverContent" class="hover-content">
-  <img src="https://via.placeholder.com/150" alt="New Image">
-  <p>New text on hover!</p>
+  <img src="photo.jpeg" alt="New Image">
+  <p>New text on hover</p>
 </div>
 
 <script>
