--- a/js_predefined_functions.html
+++ b/js_predefined_functions.html
@@ -51,9 +51,9 @@ code {
 </head>
 <body>
   <div class="container">
-    <h1>JavaScript String and Math Functions</h1>
+    <h1><u>JavaScript String and Math Functions</u></h1>
     <div class="section">
-      <h2>String Functions</h2>
+      <h2><u>String Functions</u></h2>
       <p>JavaScript provides a variety of functions to manipulate strings:</p>
       <ul>
         <li>length: Returns the length of a string.</li>
@@ -72,7 +72,7 @@ code {
     </div>
 
     <div class="section">
-      <h2>Math Functions</h2>
+      <h2><u>Math Functions</u></h2>
       <p>JavaScript provides a set of mathematical functions:</p>
       <ul>
         <li>Math.round(): Rounds a number to the nearest integer.</li>
