--- a/form/js_form_validate.html
+++ b/form/js_form_validate.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registration Form</title>
-  <style>/* General styling */
+  <style>
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f3f4f6;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,27 +14,21 @@ body {
 form {
   background-color: #fff;
   border-radius: 8px;
-  padding: 20px 30px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 400px;
 }
 
-/* Form heading */
 h2 {
   text-align: center;
   color: #333;
-  margin-bottom: 20px;
-}
 
-/* Labels */
+}
 label {
   font-weight: bold;
   color: #555;
   margin-bottom: 5px;
 }
 
-/* Input fields */
 input[type="text"],
 input[type="password"],
 input[type="email"],
@@ -54,19 +44,7 @@ textarea {
   font-size: 16px;
 }
 
-input:focus,
-select:focus,
-textarea:focus {
-  border-color: #4a90e2;
-  outline: none;
-}
 
-/* Textarea */
-textarea {
-  resize: vertical;
-}
-
-/* Error messages */
 .error {
   color: #e63946;
   font-size: 0.9em;
@@ -74,34 +52,20 @@ textarea {
   margin-bottom: 10px;
 }
 
-/* Submit button */
 button.submit-btn {
   background-color: #4a90e2;
   color: #fff;
   border: none;
   padding: 12px;
   border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
   width: 100%;
-  transition: background-color 0.3s;
 }
 
-button.submit-btn:hover {
-  background-color: #357abd;
-}
-
-/* Mobile responsive */
-@media (max-width: 600px) {
-  form {
-    padding: 15px;
-  }
-}
 
   </style>
 </head>
 <body>
-
+<div>
   <form id="registrationForm" onsubmit="return validateForm()">
     <h2>Registration Form</h2>
     
@@ -144,6 +108,7 @@ button.submit-btn:hover {
 
     <button type="submit" class="submit-btn">Register</button>
   </form>
+  </div>
 
   <script>
     function validateForm() {
